--- a/app/src/main/res/layout/activity_resource_sharing.xml
+++ b/app/src/main/res/layout/activity_resource_sharing.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/btnschedule"
     android:padding="16dp"
     android:paddingTop="40dp"
     android:layout_width="match_parent"
