--- a/app/src/main/res/layout/activity_goals.xml
+++ b/app/src/main/res/layout/activity_goals.xml
@@ -1,10 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_gradient"
+    android:padding="24dp"
     tools:context=".GoalsActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/titlegoals"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="🎯 Study Goals"
+        android:layout_centerHorizontal="true"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:textColor="#ffffff"
+        />
+    
+    
+    <EditText
+        android:id="@+id/goalinput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter your Study Goal"
+        android:background="@drawable/bg_input"
+        android:padding="14dp"
+        android:textColor="#000"
+        android:textColorHint="#888"
+        android:layout_below="@+id/titlegoals"
+        android:layout_marginTop="24dp"/>
+
+
+    <Button
+        android:id="@+id/btnddgoal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/goalinput"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="34dp"
+        android:layout_marginEnd="138dp"
+        android:backgroundTint="#4CAF50"
+        android:foregroundGravity="center"
+        android:gravity="center"
+        android:text="➕ Add Goal"
+        android:textColor="#fff" />
+    
+    
+    
+    <ListView
+        android:id="@+id/goalsidview"
+        android:layout_below="@id/btnddgoal"
+        android:layout_marginTop="24dp"
+        android:divider="#ffffff"
+        android:dividerHeight="1dp"
+        android:background="@drawable/bg_card"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
+</RelativeLayout>
