--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -58,6 +58,13 @@
             android:layout_height="wrap_content"
             android:text="Schedule Session" />
 
+        <Button
+            android:id="@+id/rating"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rating ⭐" />
+
 
     </LinearLayout>
 
