--- a/app/src/main/res/layout/activity_forum_chat.xml
+++ b/app/src/main/res/layout/activity_forum_chat.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:text="Forum Chat"
         android:textSize="22sp"
+        android:paddingTop="10dp"
         android:textStyle="bold"
         android:layout_marginBottom="8dp"
         android:textColor="#333" />
@@ -36,6 +37,7 @@
         <EditText
             android:id="@+id/messageinput"
             android:layout_width="0dp"
+            android:paddingTop="40dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="Type your message..."
