--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -9,8 +9,8 @@
     <ImageView
         android:layout_width="72dp"
         android:layout_height="72dp"
-        android:src="@android:drawable/ic_menu_gallery"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:src="@drawable/img" />
 
     <TextView
         android:id="@+id/nav_user_name"
