--- a/app/src/main/res/drawable/bg_chat_bubble_received.xml
+++ b/app/src/main/res/drawable/bg_chat_bubble_received.xml
@@ -1,5 +1,4 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#E0E0E0" /> <!-- Light gray -->
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <solid android:color="#E0E0E0" />
     <corners android:radius="16dp" />
 </shape>
