--- a/app/src/main/res/drawable/bg_chat_bubble_sent.xml
+++ b/app/src/main/res/drawable/bg_chat_bubble_sent.xml
@@ -1,5 +1,4 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#3F51B5" /> <!-- Blue -->
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <solid android:color="#2196F3" />
     <corners android:radius="16dp" />
 </shape>
