--- a/app/src/main/res/layout/item_chat_sent.xml
+++ b/app/src/main/res/layout/item_chat_sent.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
-    android:gravity="end">
+    android:gravity="end"
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/text_message_body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_chat_bubble_sent"
-        android:textColor="#FFFFFF"
-        android:padding="12dp"
+        android:padding="10dp"
+        android:textColor="#ffffff"
         android:textSize="16sp" />
 </LinearLayout>
